force-app/main/default/objects/Starter_Company_Clients__c/Starter_Company_Clients__c.object-meta.xml
<CustomObject>
    <description>Enterprise Toronto&#39;s grant management module for the Starter Company Program.</description>
    <label>Starter Company</label>
    <nameField>
        <displayFormat>SC-{YYYY}-{00000000}</displayFormat>
        <label>Starter Company Acct</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Starter Company</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>