force-app/main/default/objects/Starter_Company_Clients__c/fields/Additional_thoughts_on_Starter_Company__c.field-meta.xml
<CustomField>
    <fullName>Additional_thoughts_on_Starter_Company__c</fullName>
    <label>FU - Addditional thoughts on the Program</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>