force-app/main/default/objects/Starter_Company_Clients__c/fields/Amount_of_Grant__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Grant__c</fullName>
    <label>Amount of Grant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>