force-app/main/default/objects/Starter_Company_Clients__c/fields/Are_you_a_full_time_student_and_returnin__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_full_time_student_and_returnin__c</fullName>
    <label>Are you a full-time student?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>