force-app/main/default/objects/Starter_Company_Clients__c/fields/Are_you_between_18_29_years_old__c.field-meta.xml
<CustomField>
    <fullName>Are_you_between_18_29_years_old__c</fullName>
    <label>Are you between 18-29 years old?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>