force-app/main/default/objects/Starter_Company_Clients__c/fields/Are_you_returning_to_school__c.field-meta.xml
<CustomField>
    <fullName>Are_you_returning_to_school__c</fullName>
    <label>Are you returning to school?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>