force-app/main/default/objects/Starter_Company_Clients__c/fields/Assigned_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Advisor__c</fullName>
    <label>Assigned Advisor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andrew Patricio</fullName>
            </value>
            <value>
                <fullName>Dana McCauley</fullName>
            </value>
            <value>
                <fullName>David Cohen</fullName>
            </value>
            <value>
                <fullName>Jason Li</fullName>
            </value>
            <value>
                <fullName>Sandi Koitsis-Zigomanis</fullName>
            </value>
            <value>
                <fullName>Vanessa Ling Yu</fullName>
            </value>
            <value>
                <fullName>Vikas Jain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>