force-app/main/default/objects/Starter_Company_Clients__c/fields/Attached_Application__c.field-meta.xml
<CustomField>
    <fullName>Attached_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attached - Application</label>
    <type>Checkbox</type>
</CustomField>