force-app/main/default/objects/Starter_Company_Clients__c/fields/Attached_Business_Plan__c.field-meta.xml
<CustomField>
    <fullName>Attached_Business_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attached - Business Plan</label>
    <type>Checkbox</type>
</CustomField>