force-app/main/default/objects/Starter_Company_Clients__c/fields/Attached_Grant_Review_Score__c.field-meta.xml
<CustomField>
    <fullName>Attached_Grant_Review_Score__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attached - Grant Review Scoring</label>
    <type>Checkbox</type>
</CustomField>