force-app/main/default/objects/Starter_Company_Clients__c/fields/Attached_Proof_of_25__c.field-meta.xml
<CustomField>
    <fullName>Attached_Proof_of_25__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attached - Proof of 25%</label>
    <type>Checkbox</type>
</CustomField>