force-app/main/default/objects/Starter_Company_Clients__c/fields/Benefits_of_Program__c.field-meta.xml
<CustomField>
    <fullName>Benefits_of_Program__c</fullName>
    <description>Please describe how participating in the Starter Company Program will benefit your business.</description>
    <inlineHelpText>Please describe how participating in the Starter Company Program will benefit your business.</inlineHelpText>
    <label>Benefits of Program</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>