force-app/main/default/objects/Starter_Company_Clients__c/fields/Business_Idea__c.field-meta.xml
<CustomField>
    <fullName>Business_Idea__c</fullName>
    <description>Briefly describe what your business will do and the product or service you will provide. Please also tell us where your business will be located, when you plan to launch (if a new business) and your proposed operating hours.</description>
    <inlineHelpText>Briefly describe what your business will do and the product or service you will provide. Please also tell us where your business will be located, when you plan to launch (if a new business) and your proposed operating hours.</inlineHelpText>
    <label>Business Idea</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>