force-app/main/default/objects/Starter_Company_Clients__c/fields/Can_commit_35_hours_a_week__c.field-meta.xml
<CustomField>
    <fullName>Can_commit_35_hours_a_week__c</fullName>
    <label>Can commit 35 hours a week?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>