force-app/main/default/objects/Starter_Company_Clients__c/fields/Client_Consultations_Notes_Dates__c.field-meta.xml
<CustomField>
    <fullName>Client_Consultations_Notes_Dates__c</fullName>
    <label>Client Consultations - Notes &amp; Dates</label>
    <length>90768</length>
    <type>Html</type>
</CustomField>