force-app/main/default/objects/Starter_Company_Clients__c/fields/Client_Final_Report__c.field-meta.xml
<CustomField>
    <fullName>Client_Final_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attached - Client Final Report</label>
    <type>Checkbox</type>
</CustomField>