force-app/main/default/objects/Starter_Company_Clients__c/fields/Commit_to_the_training_program__c.field-meta.xml
<CustomField>
    <fullName>Commit_to_the_training_program__c</fullName>
    <label>Commit to the training program?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>