force-app/main/default/objects/Starter_Company_Clients__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Starter_Company_Clients</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>