force-app/main/default/objects/Starter_Company_Clients__c/fields/Currently_enrolled_in_the_Self_Employmen__c.field-meta.xml
<CustomField>
    <fullName>Currently_enrolled_in_the_Self_Employmen__c</fullName>
    <inlineHelpText>Self Employment Benefit Program</inlineHelpText>
    <label>Currently enrolled in the SEB Program?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>