force-app/main/default/objects/Starter_Company_Clients__c/fields/Date_of_Completing_Program__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Completing_Program__c</fullName>
    <label>Date of Completing Program</label>
    <type>Date</type>
</CustomField>