force-app/main/default/objects/Starter_Company_Clients__c/fields/Date_of_Grant_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Grant_Approval__c</fullName>
    <label>Date of Grant Approval</label>
    <type>Date</type>
</CustomField>