force-app/main/default/objects/Starter_Company_Clients__c/fields/Demonstrate_25_commitment__c.field-meta.xml
<CustomField>
    <fullName>Demonstrate_25_commitment__c</fullName>
    <description>Need to demonstrate 25% in cash or existing commitment to the business to qualify.</description>
    <inlineHelpText>Need to demonstrate 25% in cash or existing commitment to the business to qualify.</inlineHelpText>
    <label>Demonstrate 25% commitment?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>