force-app/main/default/objects/Starter_Company_Clients__c/fields/Food_Venture_Client__c.field-meta.xml
<CustomField>
    <fullName>Food_Venture_Client__c</fullName>
    <label>Food Venture Client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>