force-app/main/default/objects/Starter_Company_Clients__c/fields/FU_Business_Status__c.field-meta.xml
<CustomField>
    <fullName>FU_Business_Status__c</fullName>
    <inlineHelpText>What was your business status when you began Starter Company?</inlineHelpText>
    <label>FU - Business Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing Business</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>