force-app/main/default/objects/Starter_Company_Clients__c/fields/FU_Expanded_your_business__c.field-meta.xml
<CustomField>
    <fullName>FU_Expanded_your_business__c</fullName>
    <label>FU - Expanded your business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>