force-app/main/default/objects/Starter_Company_Clients__c/fields/FU_Hired_any_staff__c.field-meta.xml
<CustomField>
    <fullName>FU_Hired_any_staff__c</fullName>
    <label>FU - Hired any staff</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>