force-app/main/default/objects/Starter_Company_Clients__c/fields/FU_Importance_of_Starter_Company__c.field-meta.xml
<CustomField>
    <fullName>FU_Importance_of_Starter_Company__c</fullName>
    <inlineHelpText>How important was the Starter Company Program in helping you reach your business goals?</inlineHelpText>
    <label>FU - Importance of Starter Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not at all important</fullName>
            </value>
            <value>
                <fullName>Slightly important</fullName>
            </value>
            <value>
                <fullName>Important</fullName>
            </value>
            <value>
                <fullName>Fairly Important</fullName>
            </value>
            <value>
                <fullName>Very Important</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>