force-app/main/default/objects/Starter_Company_Clients__c/fields/FU_Please_rate_the_mentoring_program__c.field-meta.xml
<CustomField>
    <fullName>FU_Please_rate_the_mentoring_program__c</fullName>
    <inlineHelpText>How would you rate the mentoring program for Starter Company?</inlineHelpText>
    <label>FU - Please rate the mentoring program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not at all helpful</fullName>
            </value>
            <value>
                <fullName>Slightly helpful</fullName>
            </value>
            <value>
                <fullName>Helpful</fullName>
            </value>
            <value>
                <fullName>Fairly helpful</fullName>
            </value>
            <value>
                <fullName>Very helpful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>