force-app/main/default/objects/Starter_Company_Clients__c/fields/FU_Started_Your_Business__c.field-meta.xml
<CustomField>
    <fullName>FU_Started_Your_Business__c</fullName>
    <label>FU - Started Your Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>