force-app/main/default/objects/Starter_Company_Clients__c/fields/FU_Who_was_your_program_advisor__c.field-meta.xml
<CustomField>
    <fullName>FU_Who_was_your_program_advisor__c</fullName>
    <label>FU - Who was your program advisor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andrew Patricio</fullName>
            </value>
            <value>
                <fullName>Vikas Jain</fullName>
            </value>
            <value>
                <fullName>Sandi Koitsis-Zigomanis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>