force-app/main/default/objects/Starter_Company_Clients__c/fields/FV_Client_Type__c.field-meta.xml
<CustomField>
    <fullName>FV_Client_Type__c</fullName>
    <label>FV Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FV (30&lt;)</fullName>
            </value>
            <value>
                <fullName>SC (29&gt;)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>