force-app/main/default/objects/Starter_Company_Clients__c/fields/If_yes_please_identify__c.field-meta.xml
<CustomField>
    <fullName>If_yes_please_identify__c</fullName>
    <label>If yes, please identify</label>
    <length>250</length>
    <type>Text</type>
</CustomField>