force-app/main/default/objects/Starter_Company_Clients__c/fields/Legal_Structure__c.field-meta.xml
<CustomField>
    <fullName>Legal_Structure__c</fullName>
    <label>Legal Structure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sole Proprietor</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Not Yet Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>