force-app/main/default/objects/Starter_Company_Clients__c/fields/Level_of_Education__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Education__c</fullName>
    <description>Diploma/Degree or highest grade of school completed</description>
    <inlineHelpText>Diploma/Degree or highest grade of school completed</inlineHelpText>
    <label>Level of Education</label>
    <type>TextArea</type>
</CustomField>