force-app/main/default/objects/Starter_Company_Clients__c/fields/List_how_you_will_allocate_the_grant__c.field-meta.xml
<CustomField>
    <fullName>List_how_you_will_allocate_the_grant__c</fullName>
    <description>Provide a list of items and their cost.</description>
    <label>List how you will allocate the grant:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>