force-app/main/default/objects/Starter_Company_Clients__c/fields/List_Startup_Costs__c.field-meta.xml
<CustomField>
    <fullName>List_Startup_Costs__c</fullName>
    <description>Outline the main startup costs.</description>
    <inlineHelpText>List your start up costs - eg. Software - $1,000, etc.</inlineHelpText>
    <label>List Startup Costs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>