force-app/main/default/objects/Starter_Company_Clients__c/fields/Marketing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Plan__c</fullName>
    <description>Outline how you will reach your customers through advertising and promotion</description>
    <inlineHelpText>Outline how you will reach your customers through advertising and promotion</inlineHelpText>
    <label>Marketing Plan</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>