force-app/main/default/objects/Starter_Company_Clients__c/fields/Mentor_List__c.field-meta.xml
<CustomField>
    <fullName>Mentor_List__c</fullName>
    <label>Mentor List (Names &amp; Dates)</label>
    <type>TextArea</type>
</CustomField>