force-app/main/default/objects/Starter_Company_Clients__c/fields/Mentor_Selected__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Selected__c</fullName>
    <label>Mentor Selected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>