force-app/main/default/objects/Starter_Company_Clients__c/fields/Milestones_Completed__c.field-meta.xml
<CustomField>
    <fullName>Milestones_Completed__c</fullName>
    <label>Milestones Completed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Milestone #1</fullName>
            </value>
            <value>
                <fullName>Milestone #2</fullName>
            </value>
            <value>
                <fullName>Milestone #3</fullName>
            </value>
            <value>
                <fullName>Milestone #4</fullName>
            </value>
            <value>
                <fullName>Milestone #5</fullName>
            </value>
            <value>
                <fullName>Milestone #6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>