force-app/main/default/objects/Starter_Company_Clients__c/fields/N2nd_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>N2nd_Disbursement__c</fullName>
    <label>2nd Disbursement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>