force-app/main/default/objects/Starter_Company_Clients__c/fields/Name_of_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Applicant__c</fullName>
    <formula>Contact__r.FirstName &amp;&quot; &quot;&amp; Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name of Applicant</label>
    <type>Text</type>
</CustomField>