force-app/main/default/objects/Starter_Company_Clients__c/fields/Name_of_School_College_University__c.field-meta.xml
<CustomField>
    <fullName>Name_of_School_College_University__c</fullName>
    <description>Name of School/College/University</description>
    <inlineHelpText>Name of School/College/University</inlineHelpText>
    <label>Name of School</label>
    <type>TextArea</type>
</CustomField>