force-app/main/default/objects/Starter_Company_Clients__c/fields/Notes_from_Grant_Committee__c.field-meta.xml
<CustomField>
    <fullName>Notes_from_Grant_Committee__c</fullName>
    <label>Notes from Grant Committee</label>
    <length>90000</length>
    <type>Html</type>
</CustomField>