force-app/main/default/objects/Starter_Company_Clients__c/fields/Number_of_Mentor_Hours__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Mentor_Hours__c</fullName>
    <label>Number of Mentor Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>