force-app/main/default/objects/Starter_Company_Clients__c/fields/Number_of_Mentors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Mentors__c</fullName>
    <label>Number of Mentors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>