force-app/main/default/objects/Starter_Company_Clients__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <inlineHelpText>Describe your opportunities.</inlineHelpText>
    <label>Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>