force-app/main/default/objects/Starter_Company_Clients__c/fields/Phase_1_Application_Approved__c.field-meta.xml
<CustomField>
    <fullName>Phase_1_Application_Approved__c</fullName>
    <label>Phase #1 - Application Approved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Training Deferred</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>