force-app/main/default/objects/Starter_Company_Clients__c/fields/Phase_1_Application_Notes__c.field-meta.xml
<CustomField>
    <fullName>Phase_1_Application_Notes__c</fullName>
    <label>Phase #1 - Application Notes</label>
    <length>90000</length>
    <type>Html</type>
</CustomField>