force-app/main/default/objects/Starter_Company_Clients__c/fields/Phase_1_Application_Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Phase_1_Application_Reviewed_By__c</fullName>
    <label>Phase #1 - Application Reviewed By:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andrew Patricio</fullName>
            </value>
            <value>
                <fullName>Chris Rickett</fullName>
            </value>
            <value>
                <fullName>David Cohen</fullName>
            </value>
            <value>
                <fullName>Jason Li</fullName>
            </value>
            <value>
                <fullName>Margie Galarneau</fullName>
            </value>
            <value>
                <fullName>Sandi Koitsis-Zigomanis</fullName>
            </value>
            <value>
                <fullName>Vikas Jain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>