force-app/main/default/objects/Starter_Company_Clients__c/fields/Phase_1_Date_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Phase_1_Date_Reviewed__c</fullName>
    <label>Phase #1 - Date Reviewed</label>
    <type>Date</type>
</CustomField>