force-app/main/default/objects/Starter_Company_Clients__c/fields/Phase_1_Interview_Request__c.field-meta.xml
<CustomField>
    <fullName>Phase_1_Interview_Request__c</fullName>
    <label>Phase #1 - Interview Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - Not Notified</fullName>
            </value>
            <value>
                <fullName>No - Not Notified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>